--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <div> <center><img src="images/3038.jpg" alt=""></center></div>
-    <p>I'm a computer scientist</p> 
+    <p>I'm a computer scientist </p> 
 </section>
 
 <section id="projects">
@@ -30,7 +30,7 @@
     </div>
     <div class="project">
         <h3>Project 2</h3>
-        <p>Build a Working Chess game</p>
+        <p>Build a Working Chess game using javascript</p>
     </div>
 </section>
 
@@ -44,6 +44,7 @@
     <section>
         <h2>Contact Me</h2>
         <p>Email: piuskitili7@gmail.com</p>
+        <p>Phone Number:0794631137</p>
     </section>
     <p>&copy; 2023 PIUS KITILI</p>
 </footer>
